La página principal se adapta correctamente
gitflow-feature-stash: feature_blog_home_responsive

--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -47,7 +47,7 @@
     <div class="container-fluid hidden-xs " id="top">
         <div class="container">
             <i class="fa fa-phone"></i> 942 12 34 56
-            <i class="fa fa-envelope"></i> email@dominio.com
+            <i class="fa fa-envelope"></i> chachachachi.limpieza@gmail.com
 
             <!-- sociales -->
             <ul class="list-unstyled iconos-social">
@@ -64,55 +64,52 @@
                 <li>
                     <a href="#"><i class="fa fa-linkedin"></i></a>
                 </li>
-                <li>
-                    <a href="#"><i class="fa fa-github"></i></a>
-                </li>
             </ul>
         </div>
     </div>
     <!-- Barra Menu -->
     <nav class=" container-fluid navbar navbar-default" id="barra" data-spy="affix" data-offset-top="37" style="background-color: white;">
-        <div class="container">
-            <div id="logo">
-                <a id="titulo-pagina" href="#">
-                    <img src="./../../images/icono/pink/cleaner64.png">
-                    <span>CHACHA CHACHI</span>
-                </a>
+        <!-- <div class="container"> -->
+        <div id="logo">
+            <a id="titulo-pagina" href="#">
+                <img src="./../../images/icono/pink/cleaner64.png">
+                <span>CHACHA CHACHI</span>
+            </a>
 
-                <!-- Botón para movil -->
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <!-- Botón para movil -->
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>                        
 					<span class="icon-bar"></span>
 				</button>
-            </div>
-
-            <!-- Menu -->
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#top">Home</a></li>
-                    <li><a href="#sobrenosotros">Sobre nosotros</a></li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Servicios <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#servicios">Limpieza de casa</a></li>
-                            <li><a href="#servicios">Limpieza en mudanzas</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#seccontact">Contacto</a></li>
-                    <li><a href="#faq">FAQS</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a id="login" href="./../login/view.php">
-                            <img src="./../../images/icono/login/login64.png">
-                        </a>
-                    </li>
-                </ul>
-
-            </div>
         </div>
+
+        <!-- Menu -->
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#top">Home</a></li>
+                <li><a href="#sobrenosotros">Sobre nosotros</a></li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Servicios <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#servicios">Limpieza de casa</a></li>
+                        <li><a href="#servicios">Limpieza en mudanzas</a></li>
+                    </ul>
+                </li>
+                <li><a href="#seccontact">Contacto</a></li>
+                <li><a href="#faq">FAQS</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a id="login" href="./../login/view.php">
+                        <img src="./../../images/icono/login/login64.png">
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+        <!-- </div> -->
     </nav>
 
     <!-- Slider -->
@@ -130,23 +127,23 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="./../../images/slider/escobas.jpg">
+                    <img src="./../../images/slider/escobas.jpg" class="img-responsive">
                 </div>
 
                 <div class="item">
-                    <img src="./../../images/slider/cristales.jpg">
+                    <img src="./../../images/slider/cristales.jpg" class="img-responsive">
                 </div>
 
                 <div class="item">
-                    <img src="./../../images/slider/grifo.jpg">
+                    <img src="./../../images/slider/grifo.jpg" class="img-responsive">
                 </div>
 
                 <div class="item">
-                    <img src="./../../images/slider/lavadora.jpg">
+                    <img src="./../../images/slider/lavadora.jpg" class="img-responsive">
                 </div>
 
                 <div class="item">
-                    <img src="./../../images/slider/productos.jpg">
+                    <img src="./../../images/slider/productos.jpg" class="img-responsive">
                 </div>
             </div>
 
@@ -163,24 +160,24 @@
     </div>
 
     <!-- SECCION sobre nosotros -->
-    <section id="sobrenosotros" class="container no-margin no-padding">
-        <div class="row">
-            <img src="./../../images/sobrenosotros/mitadsofa.jpg" class="col-md-6">
-            <div id="sntexto" class="col-md-6">
-                <h2 class="text-center text-uppercase">SERVICIOS DE <span class="chachi">CHACHI</span>LIMPIEZA</h2>
+    <section id="sobrenosotros" class="container-fluid no-margin no-padding">
+        <!-- <div class="row"> -->
+        <img src="./../../images/sobrenosotros/mitadsofa.jpg" class="col-md-6 col-sm-6 col-xs-12 no-padding img-responsive">
+        <div id="sntexto" class="col-md-6 col-sm-6 col-xs-12">
+            <h2 class="text-center text-uppercase">SERVICIOS DE <span class="chachi">CHACHI</span>LIMPIEZA</h2>
 
-                <h3 class="text-center">LIMPIAMOS TU CASA POR TI</h3>
-                <p>Imagínese volver a casa después de un largo día a un lugar limpio, ordenado y acogedor. Chacha Chachi está aquí para hacer ese sueño realidad. Como una empresa líder en la industria que ha brindado servicios confiables de limpieza de la
-                    casa desde 2018, Sabemos que tus necesidades son únicas. Por eso nos tomamos el tiempo de ofrecer servicios que se ajustan a su presupuesto, sus preferencias de limpieza y su ocupado estilo de vida.</p>
-            </div>
+            <h3 class="text-center">LIMPIAMOS TU CASA POR TI</h3>
+            <p>Imagínese volver a casa después de un largo día a un lugar limpio, ordenado y acogedor. Chacha Chachi está aquí para hacer ese sueño realidad. Como una empresa líder en la industria que ha brindado servicios confiables de limpieza de la casa
+                desde 2018, Sabemos que tus necesidades son únicas. Por eso nos tomamos el tiempo de ofrecer servicios que se ajustan a su presupuesto, sus preferencias de limpieza y su ocupado estilo de vida.</p>
         </div>
+        <!-- </div> -->
     </section>
     <!-- SECCION sobre nosotros -->
 
     <!-- SECCION servicios -->
     <section id="servicios" class="container-fluid no-margin no-padding">
         <!-- <div class="row"> -->
-        <div id="casa" class="col-md-6 no-margin no-padding">
+        <div id="casa" class="col-md-6 col-sm-6 col-xs-6 no-margin no-padding">
             <img src="./../../images/servicios/sala.jpg" class="no-margin no-padding img-responsive">
             <div class="overlay1 no-margin no-padding">
                 <div class="text1">
@@ -188,7 +185,7 @@
                 </div>
             </div>
         </div>
-        <div id="mudanza" class="col-md-6 no-margin no-padding">
+        <div id="mudanza" class="col-md-6 col-sm-6 col-xs-6 no-margin no-padding">
             <img src="./../../images/servicios/openHouse.jpg" class="no-margin no-padding img-responsive">
             <div class="overlay2 no-margin no-padding">
                 <div class="text2">
@@ -204,30 +201,30 @@
     <!--SECCION contacto -->
     <section id="seccontact" class="container-fluid">
         <div class="row contacto no-margin no-padding">
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-12 col-xs-12">
                 <h3 class="text-center text-uppercase">Contacto</h3>
                 <div class="contenedor">
                     <form id="contact-form">
                         <input id="numhid" type="hidden" name="contact_number">
                         <div class="row">
-                            <label class="col-md-3">Nombre</label>
-                            <input type="text" id="name" class="col-md-9" name="user_name" placeholder="Escribe tu nombre" required>
+                            <label class="col-md-3 col-sm-3 col-xs-5">Nombre</label>
+                            <input type="text" id="name" class="col-md-9 col-sm-9 col-xs-7" name="user_name" placeholder="Escribe tu nombre" required>
                         </div>
                         <div class="row">
-                            <label class="col-md-3">Correo</label>
-                            <input type="email" id="mail" class="col-md-9" name="user_email" placeholder="example@mail.com" required>
+                            <label class="col-md-3 col-sm-3 col-xs-5">Correo</label>
+                            <input type="email" id="mail" class="col-md-9 col-sm-9 col-xs-7" name="user_email" placeholder="example@mail.com" required>
                         </div>
                         <div class="row">
-                            <label class="col-md-3">Servicio</label>
-                            <select id="serviciolimpieza" class="col-md-9" name="user_cleaning" required>
+                            <label class="col-md-3 col-sm-3 col-xs-5">Servicio</label>
+                            <select id="serviciolimpieza" class="col-md-9 col-sm-9 col-xs-7" name="user_cleaning" required>
                             <option value="" selected disabled hidden>Eliga un servicio de limpieza</option>
                             <option value="Limpieza de Casa">Limpieza de Casa</option>
                             <option value="Limpieza en mudanzas">Limpieza en mudanzas</option>
                         </select>
                         </div>
                         <div class="row">
-                            <label class="col-md-3">Comentario</label>
-                            <textarea id="comentario" class="col-md-9" name="contact" placeholder="Escribe aquí" required></textarea>
+                            <label class="col-md-3 col-sm-3 col-xs-5">Comentario</label>
+                            <textarea id="comentario" class="col-md-9 col-sm-9 col-xs-7" name="contact" placeholder="Escribe aquí" required></textarea>
                         </div>
                         <div class="row">
                             <input type="submit" id="enviar" value="Enviar">
@@ -236,7 +233,7 @@
                     </form>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-12 col-xs-12">
                 <h4 class="text-center text-uppercase">Ubicación</h4>
                 <div id="map-container-google" class="z-depth-1-half map-container">
                     <iframe src="https://maps.google.com/maps?q=madrid&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -246,39 +243,37 @@
     </section>
     <!--SECCION contacto -->
     <!--SECCION faq -->
-    <section id="faq" class="container">
-        <div class="row">
+    <section id="faq" class="container-fluid">
+        <div class="col-md-12">
             <h3 class="text-center text-uppercase">Preguntas frecuentes</h3>
             <h4 class="text-center">Respuestas a nuestras preguntas más comunes</h4>
             <p>Chacha Chachi está comprometida con la completa satisfacción de sus clientes, razón por la cual nos esforzamos por ofrecer los servicios de limpieza de su hogar más confiables y asequibles. Nuestro equipo de profesionales ha respondido algunas
                 de las preguntas más frecuentes.</p>
             <p class="text-center"><span class="chachi">¿Tiene una pregunta específica?</span> Rellene nuestro formulario de <a class="chachi" href="#contacto">contacto</a></p>
-            <div class="panel-group">
-                <div class="panel panel-default">
+
+            <div class="panel-group" id="accordion">
+                <div class="panel panel-default col-md-12 col-sm-12 col-xs-12">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse1">¿Porque debería confiar en Chacha Chachi?</a>
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">¿Porque debería confiar en Chacha Chachi?</a>
                         </h4>
                     </div>
-                    <div id="collapse1" class="panel-collapse collapse">
-                        <h4>
-                            Estamos orgullosos de ofrecer servicios de limpieza profesional y empleamos a amas de llaves residenciales que se enorgullecen de ofrecer servicios de alta calidad. Después de someterse a una exhaustiva verificación de antecedentes, cada miembro de nuestro
-                            equipo está completamente capacitado en cada paso de nuestros planes de limpieza detallados. También respaldamos todo nuestro trabajo con una garantía de 24 horas. Estas son solo algunas de las muchas razones por las que los
-                            clientes confían en Molly Maid.</h4>
-                        <div class="panel-footer"></div>
+                    <div id="collapse1" class="panel-collapse collapse in">
+                        <div class="panel-body">Estamos orgullosos de ofrecer servicios de limpieza profesional y empleamos a amas de llaves residenciales que se enorgullecen de ofrecer servicios de alta calidad. Después de someterse a una exhaustiva verificación de antecedentes,
+                            cada miembro de nuestro equipo está completamente capacitado en cada paso de nuestros planes de limpieza detallados. También respaldamos todo nuestro trabajo con una garantía de 24 horas. Estas son solo algunas de las muchas
+                            razones por las que los clientes confían en Chacha Chachi.</div>
                     </div>
                 </div>
-                <div class="panel panel-default">
+                <div class="panel panel-default col-md-12 col-sm-12 col-xs-12">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse2">¿A quién contrata Chacha Chachi para limpiar mi casa?</a>
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">¿A quién contrata Chacha Chachi para limpiar mi casa?</a>
                         </h4>
                     </div>
                     <div id="collapse2" class="panel-collapse collapse">
-                        <h4>Puede estar seguro de que todos nuestros profesionales de limpieza están totalmente capacitados y asegurados. Respetamos a todos nuestros clientes al nunca fumar, beber, comer o usar electrodomésticos durante las limpiezas de la
+                        <div class="panel-body">Puede estar seguro de que todos nuestros profesionales de limpieza están totalmente capacitados y asegurados. Respetamos a todos nuestros clientes al nunca fumar, beber, comer o usar electrodomésticos durante las limpiezas de la
                             casa. Usamos nuestros uniformes reconocidos nacionalmente con orgullo y con confianza llevamos a cabo servicios que superan las expectativas. También nos entrenamos regularmente para asegurarnos de estar siempre al día con
-                            las últimas y mejores técnicas de limpieza. Para mayor seguridad y tranquilidad, el trabajo que realizamos para cada cliente es responsabilizado por un supervisor confiable y experimentado.</h4>
-                        <div class="panel-footer"></div>
+                            las últimas y mejores técnicas de limpieza. Para mayor seguridad y tranquilidad, el trabajo que realizamos para cada cliente es responsabilizado por un supervisor confiable y experimentado.</div>
                     </div>
                 </div>
             </div>
@@ -288,37 +283,17 @@
 
     <!-- SECCION PIE -->
     <footer id="footer" class="container-fluid">
-        <div class="row">
+        <div class="col-md-12">
 
             <!-- copyright -->
-            <div class="copyright col-md-3">
-                <p>&copy;Inés Carazo Núñez 2019</p>
+            <div class="copyright col-md-6">
+                <p class="text-center">&copy;Inés Carazo Núñez 2019</p>
             </div>
 
-            <div class="col-md-3">
-                <a href="./export.html">Política de privacidad</a>
+            <div class="col-md-6">
+                <p class="text-center"><a target="blank" href="./export.html">Política de privacidad</a></p>
             </div>
-            <!-- sociales -->
-            <div class="col-md-offset-2 col-md-2">
-                <ul class="list-unstyled iconos-social">
-                    <li>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                    </li>
 
-                    <li>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-github"></i></a>
-                    </li>
-                </ul>
-            </div>
         </div>
     </footer>
 
