--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -177,7 +177,7 @@
     <!-- SECCION servicios -->
     <section id="servicios" class="container-fluid no-margin no-padding">
         <!-- <div class="row"> -->
-        <div id="casa" class="col-md-6 col-sm-6 col-xs-6 no-margin no-padding">
+        <div id="casa" class="col-md-6 col-sm-6 col-xs-12 no-margin no-padding">
             <img src="./../../images/servicios/sala.jpg" class="no-margin no-padding img-responsive">
             <div class="overlay1 no-margin no-padding">
                 <div class="text1">
@@ -185,7 +185,7 @@
                 </div>
             </div>
         </div>
-        <div id="mudanza" class="col-md-6 col-sm-6 col-xs-6 no-margin no-padding">
+        <div id="mudanza" class="col-md-6 col-sm-6 col-xs-12 no-margin no-padding">
             <img src="./../../images/servicios/openHouse.jpg" class="no-margin no-padding img-responsive">
             <div class="overlay2 no-margin no-padding">
                 <div class="text2">
@@ -207,24 +207,24 @@
                     <form id="contact-form">
                         <input id="numhid" type="hidden" name="contact_number">
                         <div class="row">
-                            <label class="col-md-3 col-sm-3 col-xs-5">Nombre</label>
-                            <input type="text" id="name" class="col-md-9 col-sm-9 col-xs-7" name="user_name" placeholder="Escribe tu nombre" required>
+                            <label class="col-md-3 col-sm-3 col-xs-12">Nombre</label>
+                            <input type="text" id="name" class="col-md-9 col-sm-9 col-xs-12" name="user_name" placeholder="Escribe tu nombre" required>
                         </div>
                         <div class="row">
-                            <label class="col-md-3 col-sm-3 col-xs-5">Correo</label>
-                            <input type="email" id="mail" class="col-md-9 col-sm-9 col-xs-7" name="user_email" placeholder="example@mail.com" required>
+                            <label class="col-md-3 col-sm-3 col-xs-12">Correo</label>
+                            <input type="email" id="mail" class="col-md-9 col-sm-9 col-xs-12" name="user_email" placeholder="example@mail.com" required>
                         </div>
                         <div class="row">
-                            <label class="col-md-3 col-sm-3 col-xs-5">Servicio</label>
-                            <select id="serviciolimpieza" class="col-md-9 col-sm-9 col-xs-7" name="user_cleaning" required>
+                            <label class="col-md-3 col-sm-3 col-xs-12">Servicio</label>
+                            <select id="serviciolimpieza" class="col-md-9 col-sm-9 col-xs-12" name="user_cleaning" required>
                             <option value="" selected disabled hidden>Eliga un servicio de limpieza</option>
                             <option value="Limpieza de Casa">Limpieza de Casa</option>
                             <option value="Limpieza en mudanzas">Limpieza en mudanzas</option>
                         </select>
                         </div>
                         <div class="row">
-                            <label class="col-md-3 col-sm-3 col-xs-5">Comentario</label>
-                            <textarea id="comentario" class="col-md-9 col-sm-9 col-xs-7" name="contact" placeholder="Escribe aquí" required></textarea>
+                            <label class="col-md-3 col-sm-3 col-xs-12">Comentario</label>
+                            <textarea id="comentario" class="col-md-9 col-sm-9 col-xs-12" name="contact" placeholder="Escribe aquí" required></textarea>
                         </div>
                         <div class="row">
                             <input type="submit" id="enviar" value="Enviar">
@@ -252,7 +252,7 @@
             <p class="text-center"><span class="chachi">¿Tiene una pregunta específica?</span> Rellene nuestro formulario de <a class="chachi" href="#contacto">contacto</a></p>
 
             <div class="panel-group" id="accordion">
-                <div class="panel panel-default col-md-12 col-sm-12 col-xs-12">
+                <div class="panel panel-default col-md-12 col-sm-12 col-xs-12 no-padding">
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">¿Porque debería confiar en Chacha Chachi?</a>
@@ -264,7 +264,7 @@
                             razones por las que los clientes confían en Chacha Chachi.</div>
                     </div>
                 </div>
-                <div class="panel panel-default col-md-12 col-sm-12 col-xs-12">
+                <div class="panel panel-default col-md-12 col-sm-12 col-xs-12 no-padding">
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">¿A quién contrata Chacha Chachi para limpiar mi casa?</a>
