--- a/ProyectoNetbeans/assets/css/blog_home.css
+++ b/ProyectoNetbeans/assets/css/blog_home.css
@@ -120,7 +120,7 @@
         .contacto input[type=email],
         .contacto select,
         .contacto textarea {
-            width: 50%;
+            /* width: 50%; */
             padding: 12px;
             border: 1px solid #ccc;
             border-radius: 4px;
@@ -138,7 +138,6 @@
             border-radius: 4px;
             cursor: pointer;
             margin-top: 2%;
-            margin-left: 59%;
         }
         
         .contacto input[type=submit]:hover {
