Mirar estos cambios fallos de versiones

--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -229,7 +229,7 @@
                         <div class="row">
                             <input type="submit" id="enviar" value="Enviar">
                         </div>
-
+                        <div id="mensaje_error"></div>
                     </form>
                 </div>
             </div>
