--- a/ProyectoNetbeans/assets/css/home.css
+++ b/ProyectoNetbeans/assets/css/home.css
@@ -13,7 +13,9 @@ p {
     color: #999;
 }
 
-a, a:hover, a:focus {
+a,
+a:hover,
+a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
@@ -40,6 +42,7 @@ a, a:hover, a:focus {
     border-bottom: 1px dashed #ddd;
     margin: 40px 0;
 }
+
 
 /* ---------------------------------------------------
   SIDEBAR STYLE
@@ -91,7 +94,8 @@ a, a:hover, a:focus {
     background: #fff;
 }
 
-#sidebar ul li.active>a, a[aria-expanded="true"] {
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
     color: #fff;
     background: #f16e94;
 }
@@ -108,7 +112,8 @@ a[data-toggle="collapse"] {
     position: relative;
 }
 
-a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
+a[aria-expanded="false"]::before,
+a[aria-expanded="true"]::before {
     content: '\e259';
     display: block;
     position: absolute;
@@ -138,6 +143,7 @@ ul.CTAs a {
     border-radius: 5px;
     margin-bottom: 5px;
 }
+
 
 /* ---------------------------------------------------
   CONTENT STYLE
@@ -184,6 +190,7 @@ ul.CTAs a {
     margin: 5px auto;
 }
 
+
 /* ---------------------------------------------------
   MEDIAQUERIES
 ----------------------------------------------------- */
@@ -197,7 +204,9 @@ ul.CTAs a {
         margin-left: 0;
         transform: none;
     }
-    #sidebarCollapse span:first-of-type, #sidebarCollapse span:nth-of-type(2), #sidebarCollapse span:last-of-type {
+    #sidebarCollapse span:first-of-type,
+    #sidebarCollapse span:nth-of-type(2),
+    #sidebarCollapse span:last-of-type {
         transform: none;
         opacity: 1;
         margin: 5px auto;
@@ -221,12 +230,14 @@ ul.CTAs a {
         padding-top: 3%;
         /*padding-left: 6%;*/
     }
-    #tablaVista th, #tablaVista td {
+    #tablaVista th,
+    #tablaVista td {
         padding: 2%;
     }
 }
 
-.estilo-btn:hover, .btn-default:hover {
+.estilo-btn:hover,
+.btn-default:hover {
     background-image: linear-gradient(to bottom right, #f16e94, #f3b3c5);
     color: white;
 }
@@ -244,7 +255,9 @@ ul.CTAs a {
     background-image: url();
 }
 
-#tablaVista table, #tablaVista th, #tablaVista td {
+#tablaVista table,
+#tablaVista th,
+#tablaVista td {
     border: 2px solid #f16e94;
 }
 
@@ -279,4 +292,8 @@ span#btnTextoSpan {
     display: inline-block;
     left: 50%;
     transform: translateX(-50%);
+}
+
+#mensaje_error {
+    color: red;
 }
