Referencia a la api del mail añadida

--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -37,7 +37,14 @@
             padding-top: 70px;
         }
     </style>
-
+    <!-- Mail -->
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("user_LWAg91CjwoMDU7dVZq5Qx");
+        })();
+    </script>
+    <!-- Mail -->
 </head>
 
 
