Cambios en el menu de blog_home

--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -75,8 +75,8 @@
         </div>
     </div>
     <!-- Barra Menu -->
-    <nav class="container-fluid navbar navbar-default" id="barra" data-spy="affix" data-offset-top="37" style="background-color: white;">
-
+    <nav class=" container-fluid navbar navbar-default" id="barra" data-spy="affix" data-offset-top="37" style="background-color: white;">
+        <!-- <div class="container"> -->
         <div id="logo">
             <a id="titulo-pagina" href="#">
                 <img src="./../../images/icono/pink/cleaner64.png">
@@ -106,13 +106,17 @@
                 </li>
                 <li><a href="#seccontact">Contacto</a></li>
                 <li><a href="#faq">FAQS</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a id="login" href="./../login/view.php">
+                    <a id="login" target="blank" href="./../login/view.php">
                         <img src="./../../images/icono/login/login64.png">
                     </a>
                 </li>
             </ul>
+
         </div>
+        <!-- </div> -->
     </nav>
 
     <!-- Slider -->
