El cliente ya tiene información nada más loguearse

--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -259,9 +259,9 @@
             <div class="panel-group" id="accordion">
                 <div class="panel panel-default col-md-12 col-sm-12 col-xs-12 no-padding">
                     <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">¿Porque debería confiar en Chacha Chachi?</a>
-                        </h4>
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                            <h4 class="panel-title">¿Porque debería confiar en Chacha Chachi? <i class="fa fa-angle-down"></i></h4>
+                        </a>
                     </div>
                     <div id="collapse1" class="panel-collapse collapse in">
                         <div class="panel-body">Estamos orgullosos de ofrecer servicios de limpieza profesional y empleamos a amas de llaves residenciales que se enorgullecen de ofrecer servicios de alta calidad. Después de someterse a una exhaustiva verificación de antecedentes,
@@ -271,9 +271,9 @@
                 </div>
                 <div class="panel panel-default col-md-12 col-sm-12 col-xs-12 no-padding">
                     <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">¿A quién contrata Chacha Chachi para limpiar mi casa?</a>
-                        </h4>
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                            <h4 class="panel-title">¿A quién contrata Chacha Chachi para limpiar mi casa?<i class="fa fa-angle-down"></i></h4>
+                        </a>
                     </div>
                     <div id="collapse2" class="panel-collapse collapse">
                         <div class="panel-body">Puede estar seguro de que todos nuestros profesionales de limpieza están totalmente capacitados y asegurados. Respetamos a todos nuestros clientes al nunca fumar, beber, comer o usar electrodomésticos durante las limpiezas de la
