Más o menos todo terminado, falta arreglar programar

--- a/ProyectoNetbeans/assets/css/home.css
+++ b/ProyectoNetbeans/assets/css/home.css
@@ -314,6 +314,10 @@ span#btnTextoSpan {
     padding-left: 3%;
 }
 
+.datos ul li {
+    list-style-type: none;
+}
+
 .chachi {
     color: #f16e94;
 }
